ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/hostname: mesh4java.kongme.sh
  name: work
  namespace: mesh4java
spec:
  ingressClassName: kong
  rules:
    - host: mesh4java.kongme.sh
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: work
                port:
                  number: 8081
